# PDF-Compare

./: .dockerignore  .gitignore  Containerfile  README.md  api.Containerfile  api.py  build_exe.py  comparator.py  package.json  pyproject.toml
.github/workflows/: build.yml
lib/: cli.js  index.js  python-bridge.js  setup.js
python/: comparator.py  compare_pdf.py  main.py  requirements.txt
sample-scripts/: client-example.js
scripts/: build_linux.py  build_macos.py  build_windows.py  download_poppler.py
scripts/pyinstaller_hooks/: rthook_tcltk_macos.py
types/: index.d.ts
