[project]
name = "pdf-compare"
version = "2026.2.1"
description = "PDF comparison tool with GUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "pymupdf>=1.26.7",
    "pillow>=12.1.0",  # Required for GUI preview only
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
